# fast_api_project

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  exceptions.py  main.py  repository.py  schemas.py  security.py  services.py
app/api/: __init__.py  documents.py  users.py
generator_service/: Dockerfile  pyproject.toml
generator_service/generator/: core.py  main.py  worker.py
tests/: test_main.py
