[tool.poetry]
name = "app"
version = "0.1.0"
description = "myproject"
authors = ["Alikhan <mynbajalihan@gmail.com>"]
packages = [{include = "app"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-dotenv = "^1.2.1"
pydantic = {extras = ["email"], version = "^2.12.3"}
aiohttp = "^3.13.1"
python-docx = "^1.2.0"
clickhouse-connect = "^0.9.2"
redis = "^7.0.1"
aiokafka = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
flake8 = "^7.3.0"
black = "^25.11.0"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
