[tool.poetry]
name="generator"
version="0.1.0"
description="Сервис генерации документов"

[tool.poetry.dependencies]
python=">=3.12,<3.14"
fastapi="^0.111.1"
uvicorn={extras=["standard"], version="^0.30.3"}
python-dotenv="^1.0.1"
pydantic="^2.8.2"
aiohttp="^3.9.5"
python-docx="^1.1.2"
clickhouse-connect="^0.9.2"
redis="^5.0.7"

[build-system]
requires=["poetry-core"]
build-backend="poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
